# identity

./: .dockerignore  .gitignore  Cargo.toml  README.md  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json
migration/: Cargo.toml
migration/src/: lib.rs  m20260305_071904_create_user.rs  m20260306_022501_create_user_credential.rs  m20260306_031058_create_client.rs  m20260306_090746_create_session.rs  m20260319_121151_create_key.rs  m20260328_132501_create_setting.rs  m20260407_060453_create_client_openid_connect.rs  m20260407_060506_create_client_openid_connect_credential.rs  m20260407_060938_create_client_authorization.rs  m20260407_060938_create_client_request.rs  m20260407_071449_create_login.rs  m20260426_000001_create_scope.rs  m20260426_000002_create_client_scope.rs  m20260427_000001_create_key_jwk.rs  m20260428_000001_create_client_platform.rs
src/application/: Cargo.toml  install.rs  mod.rs
src/application/auth/: error.rs  login.rs  mod.rs  session.rs
src/application/data_protection/: error.rs  mod.rs  protector.rs
src/application/error/: app_error.rs  code.rs  kind.rs  mod.rs  params.rs
src/application/error/codes/: auth.rs  authorize.rs  authorize_http.rs  common.rs  data_protection.rs  install.rs  key.rs  mod.rs  openid_connect.rs  provider.rs  registration.rs  token.rs
src/application/key/: asymmetric.rs  error.rs  mod.rs
src/application/openid_connect/: authorize.rs  jose.rs  jwt_checks.rs  mod.rs  provider.rs  remote.rs  session.rs  token.rs  user_info.rs
src/application/openid_connect/authorize/: flow.rs  implicit_flow.rs  interaction.rs  mod.rs  protection.rs  request_object.rs  signing.rs  third_party_initiated.rs  validation.rs
src/application/openid_connect/authorize/tests/: fixtures.rs  flow.rs  interaction.rs  mod.rs  third_party_initiated.rs  validation.rs
src/application/openid_connect/dto/: mod.rs  user_info_claims.rs
src/application/openid_connect/logout/: mod.rs
src/application/openid_connect/registration/: credential.rs  mod.rs  request.rs  response.rs  tests.rs  token.rs  validation.rs
src/application/openid_connect/tests/: fixtures.rs  mod.rs
src/application/openid_connect/tests/fixtures/: client.rs  mod.rs
src/application/openid_connect/tests/fixtures/mocks/: auth.rs  (+9 more)
src/application/openid_connect/token/: auth.rs  exchange.rs  helpers.rs  mod.rs  signing.rs
src/application/openid_connect/token/tests/: auth.rs  fixtures.rs  helpers.rs  mod.rs
src/application/setting/: error.rs  runtime.rs
src/boot/: Cargo.toml  builder.rs  context.rs  install_guard.rs  lifecycle.rs  mod.rs  resources.rs  server.rs  services.rs  settings.rs  state.rs
src/domain/: Cargo.toml  mod.rs
src/domain/auth/: mod.rs  model.rs  password.rs  repository.rs  totp.rs
src/domain/client/: model.rs  repository.rs
src/domain/client/model/: client_openid_connect_credential.rs  mod.rs
src/domain/client_authorization/: mod.rs  model.rs  repository.rs
src/domain/client_request/: mod.rs  model.rs  repository.rs
src/domain/data_protection/: error.rs  key_ring.rs  mod.rs  payload.rs  purpose.rs
src/domain/key/: algorithm.rs  encryption_algorithm.rs  generator.rs  jwk.rs  material.rs  mod.rs  model.rs  repository.rs
src/domain/openid_connect/: mod.rs  repository.rs
src/domain/openid_connect/model/: authorization_request.rs  claim.rs  client.rs  credential.rs  mod.rs  oauth_error.rs  provider.rs  scope.rs
src/domain/setting/: auth_ui.rs  consent_url.rs  definition.rs  dynamic_registration.rs  error.rs  installation.rs  login_url.rs  mod.rs  model.rs  repository.rs
src/domain/user/: credential.rs  mod.rs  model.rs  normalization.rs  otp.rs  password.rs  recovery_code.rs  repository.rs
src/infrastructure/: Cargo.toml  context.rs  lifecycle.rs  mod.rs  resources.rs  services.rs  settings.rs
src/infrastructure/auth/otp/: mod.rs  totp.rs
src/infrastructure/auth/password/: argon2.rs  mod.rs
src/infrastructure/config/: mod.rs
src/infrastructure/crypto/: certificate.rs  certificate_generator.rs  data_protection.rs  encryption.rs  encryption_algorithm.rs  key.rs  key_jwk.rs  mod.rs  signing_algorithm.rs  tls.rs  xchacha20.rs
src/infrastructure/crypto/tests/: key_tests.rs  mod.rs
src/infrastructure/database/: mod.rs
src/infrastructure/database/entity/: client.rs  client_authorization.rs  client_open_id_connect.rs  client_open_id_connect_credential.rs  client_platform.rs  client_request.rs  client_scope.rs  key.rs  key_jwk.rs  login.rs  mod.rs  prelude.rs  scope.rs  session.rs  setting.rs  user.rs  user_credential.rs
src/infrastructure/database/repository/: client_authorization.rs  client_request.rs  install.rs  key.rs  key_jwk.rs  login.rs  mod.rs  openid_connect.rs  openid_connect_credential.rs  session.rs  setting.rs  shared.rs  user.rs  user_credential.rs
src/infrastructure/database/seed/: conformance.rs  key.rs  mod.rs  scope.rs
src/infrastructure/health/: mod.rs
src/infrastructure/i18n/: mod.rs
src/infrastructure/mailers/: auth.rs
src/infrastructure/mailers/auth/forgot/: html.t
src/infrastructure/mailers/auth/welcome/: html.t
src/infrastructure/observability/: mod.rs
src/infrastructure/web/: mod.rs  tera.rs
src/web/: Cargo.toml  middleware.rs  mod.rs  router.rs
src/web/controllers/: auth.rs  auth_ui.rs  conformance.rs  install.rs  mod.rs  response.rs  shared.rs  well_known.rs
src/web/controllers/oauth2/: authorize_endpoint.rs  authorize_extractor.rs  authorize_interaction.rs  authorize_response.rs  consent_endpoint.rs  logout_endpoint.rs  mod.rs  registration_endpoint.rs  session_endpoint.rs  third_party_initiated_endpoint.rs  token_endpoint.rs  user_info_endpoint.rs
src/web/controllers/oauth2/authorize_endpoint/: extractor.rs  interaction.rs  mod.rs  response.rs
src/web/controllers/oauth2/consent_endpoint/: api.rs  context.rs  decision.rs  mod.rs  page.rs
src/web/controllers/oauth2/continue_endpoint/: flow.rs  mod.rs  response.rs
src/web/controllers/oauth2/tests/: interaction_fixtures.rs  mod.rs
src/web/health/: mod.rs
src/web/views/: auth.rs  auth_ui.rs  install.rs  mod.rs  oauth2.rs
(+105 files in other folders)
