[workspace]

[package]
name = "identity"
version = "0.1.0"
edition = "2024"
publish = false
default-run = "identity"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_yml = { version = "0.0.12" }
base64 = { version = "0.22" }
tokio = { version = "1.45", default-features = false, features = [
  "rt-multi-thread",
  "macros",
  "signal",
  "net",
  "sync",
  "time",
] }
async-trait = { version = "0.1" }
salvo = { version = "0.92.1", features = ["affix-state", "csrf", "serve-static", "test"] }
http = "1"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
regex = { version = "1.11" }
migration = { path = "migration" }
sea-orm = { version = "2.0.0-rc.37", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
  "mock",
] }
chrono = { version = "0.4" }
validator = { version = "0.20" }
uuid = { version = "1.6", features = ["v4"] }
argon2 = { version = "0.5", features = ["std"] }
password-hash = { version = "0.5" }
thiserror = { version = "1" }
rand = { version = "0.8" }
sha2 = { version = "0.10" }
chacha20poly1305 = { version = "0.10" }
hkdf = { version = "0.12" }
hex = { version = "0.4" }
include_dir = { version = "0.7" }
# view engine i18n
fluent-templates = { version = "0.13", features = ["tera"] }
unic-langid = { version = "0.9" }
tera = { version = "1.20" }
# /view engine
woothee = { version = "0.13" }
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
urlencoding = { version = "2.1" }
josekit = { version = "0.10.3" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
openssl = { version = "0.10" }
url = { version = "2", features = ["serde"] }
idna = { version = "1" }

[features]
oidc-conformance = []

[[bin]]
name = "identity"
path = "src/main.rs"
required-features = []

[dev-dependencies]
serial_test = { version = "3.1.1" }
rstest = { version = "0.25" }
insta = { version = "1.34", features = ["redactions", "yaml", "filters"] }
