[workspace]
members = [
  ".",
  "migration",
  "src/application",
  "src/boot",
  "src/domain",
  "src/infrastructure",
  "src/web",
]
resolver = "3"

[workspace.dependencies]
anyhow = { version = "1" }
async-trait = { version = "0.1" }
base64 = { version = "0.22" }
chacha20poly1305 = { version = "0.10" }
chrono = { version = "0.4", features = ["serde"] }
http = "1"
idna = { version = "1" }
josekit = { version = "0.10.3" }
migration = { path = "migration" }
openssl = { version = "0.10" }
rand = { version = "0.8" }
regex = { version = "1.11" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
salvo = { version = "0.92.1", features = ["affix-state", "csrf", "serve-static", "test", "rustls"] }
sea-orm = { version = "2.0.0-rc.37", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
  "mock",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serial_test = { version = "3.1.1" }
strum = { version = "0.27", features = ["derive"] }
derive_more = { version = "2", features = ["from", "into"] }
sha2 = { version = "0.10" }
subtle = { version = "2" }
tera = { version = "1.20" }
thiserror = { version = "1" }
tokio = { version = "1.45", default-features = false, features = [
  "rt-multi-thread",
  "macros",
  "signal",
  "net",
  "sync",
  "time",
] }
tracing = { version = "0.1" }
unic-langid = { version = "0.9" }
url = { version = "2", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
woothee = { version = "0.13" }

[workspace.dependencies.identity-application]
path = "src/application"

[workspace.dependencies.identity-boot]
path = "src/boot"

[workspace.dependencies.identity-domain]
path = "src/domain"

[workspace.dependencies.identity-infrastructure]
path = "src/infrastructure"

[workspace.dependencies.identity-web]
path = "src/web"

[package]
name = "identity"
version = "0.1.0"
edition = "2024"
publish = false
default-run = "identity"

[dependencies]
chrono = { workspace = true }
identity-application = { workspace = true }
identity-boot = { workspace = true }
identity-domain = { workspace = true }
identity-infrastructure = { workspace = true }
identity-web = { workspace = true }
salvo = { workspace = true }
sea-orm = { workspace = true }
serde_json = { workspace = true }
tera = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[features]
oidc-conformance = [
  "identity-application/oidc-conformance",
  "identity-boot/oidc-conformance",
  "identity-infrastructure/oidc-conformance",
  "identity-web/oidc-conformance",
]
allow-none-alg = ["identity-application/allow-none-alg"]

[[bin]]
name = "identity"
path = "src/main.rs"
required-features = []

[dev-dependencies]
serial_test = { workspace = true }
