[package]
name = "migration"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "identity-migration"
path = "main.rs"
required-features = []

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
[dependencies.sea-orm-migration]
version = "2.0.0-rc.37"
features = [
  # Enable following runtime and db backend features if you want to run migration via CLI
  "runtime-tokio-native-tls",
  "sqlx-postgres",
]
