[package]
name = "identity-application"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "mod.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
hkdf = { version = "0.12" }
http = { workspace = true }
identity-domain = { workspace = true }
josekit = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
salvo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
validator = { version = "0.20" }

[features]
allow-none-alg = []
oidc-conformance = ["allow-none-alg"]

[dev-dependencies]
mockall = { version = "0.14" }
openssl = { workspace = true }
regex = { workspace = true }
rstest = { version = "0.25" }
sea-orm = { workspace = true }
