[package]
name = "identity-infrastructure"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "mod.rs"

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
async-trait = { workspace = true }
base64 = { workspace = true }
chacha20poly1305 = { workspace = true }
chrono = { workspace = true }
fluent-templates = { version = "0.13", features = ["tera"] }
hex = { version = "0.4" }
http = { workspace = true }
identity-application = { workspace = true }
identity-domain = { workspace = true }
idna = { workspace = true }
include_dir = { version = "0.7" }
josekit = { workspace = true }
migration = { workspace = true }
openssl = { workspace = true }
password-hash = { version = "0.5" }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
salvo = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { version = "0.0.12" }
subtle = { workspace = true }
tera = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
unic-langid = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
woothee = { workspace = true }

[features]
oidc-conformance = []
test-support = []

[dev-dependencies]
serial_test = { workspace = true }
